Slow OpenGL calls for every vertex and weight painting step #70013

Closed
opened 2019-09-18 12:37:58 +02:00 by Brecht Van Lommel · 3 comments

paint_last_stroke_update is called for every stroke step, which calls ED_view3d_autodist_simple to convert a mouse position to world space position. This does an OpenGL call to read from the depth buffer which has high latency.

Computing a world space position should not require an OpenGL call, it is already computed for the actual painting operation.

stroke_auto_depth.png

`paint_last_stroke_update` is called for every stroke step, which calls `ED_view3d_autodist_simple` to convert a mouse position to world space position. This does an OpenGL call to read from the depth buffer which has high latency. Computing a world space position should not require an OpenGL call, it is already computed for the actual painting operation. ![stroke_auto_depth.png](https://archive.blender.org/developer/F7755278/stroke_auto_depth.png)
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by 14acac0bb7

This issue was referenced by 14acac0bb7f371da915188809b96de6ecaa3e507
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-09-23 17:42:31 +02:00
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#70013
No description provided.