Fix T70013: slow OpenGL calls for every vertex and weight painting step

Stroke update use now the location from Strokecache instead of the mouse
position.

Differential Revision: https://developer.blender.org/D5861